[package]
name = "genv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta = "0.5.0"
yata = "0.6"
hyper = "0.14"
axum = { version="0.5.16", features = ["headers"] }
tower-http = { version = "0.3", features = ["full"] }
axum-sessions = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }

binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
ratsio = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }
nats ={ git ="https://github.com/nats-io/nats.rs"}
pine = { path = "../pine"}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_nanos = "0.1.1"
serde_repr = "0.1.7"
nom = "5"
lazy_static = "1.4"
assert_matches = "1.3"
rocket = "0.5.0-rc.2"
serde_derive = "^1.0.104"
chrono = "^0.4"
chrono-tz = "^0.4"
regex = "^1"
num-traits = "^0.2"
reqwest = { version = "0.11", features = ["json"] }
csv = "1.1"
error-chain = "0.12"
[dev-dependencies]
criterion = "0.3"


assert_approx_eq = "1.1"

bencher = "0.1"
rand = "0.7"
json = "0.12"
lazy_static = "1.4"
rspec = "0.1"
# cucumber = { package = "cucumber_rust", version = "^0.6.0" }
cucumber_rust = "0.6"
# cucumber = "0.3.1"
